# linux-voice-input-rs

./: .gitignore  Cargo.toml  README.md  RUST_REWRITE_PLAN.md  config.toml.example
docs/: QUICK_START.md
docs/archive/: DETAILED_PLAN.md
scripts/: configure-shortcut.sh  install.sh  remove-shortcut.sh  uninstall.sh
src/: lib.rs  main.rs
src/audio/: mod.rs  recorder.rs  silence.rs
src/config/: mod.rs
src/online/: mod.rs  xfyun_realtime.rs
src/output/: clipboard.rs
src/utils/: error.rs  mod.rs
src/whisper/: engine.rs  mod.rs  model.rs
