[package]
name = "linux-voice-input-rs"
version = "0.1.0"
edition = "2021"
authors = ["Muyao Workshop"]
description = "Linux desktop Chinese voice-to-text tool with offline and online support"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 音频录制
cpal = "0.15"

# 剪贴板操作（跨平台）
arboard = "3.3"

# CLI 参数解析
clap = { version = "4.4", features = ["derive"] }

# 配置文件
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 加密和编码（在线 API 需要）
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
httpdate = "1.0"
urlencoding = "2.1"

# WebSocket 客户端（在线识别）
tokio-tungstenite = "0.21"

# Whisper 绑定（离线识别）
whisper-rs = "0.10"

# 工具库
once_cell = "1.19"
shellexpand = "3.1"

[profile.release]
lto = "fat"              # 链接时优化
codegen-units = 1        # 单编译单元，更激进优化
opt-level = 3            # 最高优化级别
strip = true             # 去除符号表
panic = "abort"          # 减小二进制体积

[profile.dev]
opt-level = 0            # 开发时不优化，编译更快
